--- a/package.json
+++ b/package.json
@@ -11,22 +11,22 @@
   },
   "dependencies": {
     "@emotion/css": "^11.13.0",
+    "@emotion/styled": "^11.14.0",
     "@reduxjs/toolkit": "^2.2.6",
     "@tanstack/react-query": "^5.52.1",
     "@tanstack/react-query-devtools": "^5.52.1",
     "axios": "^1.7.2",
     "jquery": "^3.7.1",
     "moment": "^2.30.1",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
-    "react-cookie": "^7.1.4",
+    "react-cookie": "^7.2.2",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.1",
     "redux": "^5.0.1"
   },
   "devDependencies": {
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.2",
