--- a/package.json
+++ b/package.json
@@ -1,37 +1,40 @@
 {
-  "name": "default_react",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@emotion/css": "^11.13.0",
-    "@emotion/styled": "^11.14.0",
-    "@reduxjs/toolkit": "^2.2.6",
-    "@tanstack/react-query": "^5.52.1",
-    "@tanstack/react-query-devtools": "^5.52.1",
-    "axios": "^1.7.2",
-    "jquery": "^3.7.1",
-    "moment": "^2.30.1",
-    "prop-types": "^15.8.1",
-    "react": "^18.3.1",
-    "react-cookie": "^7.2.2",
-    "react-dom": "^18.3.1",
-    "react-redux": "^9.1.2",
-    "react-router-dom": "^6.24.1",
-    "redux": "^5.0.1"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-react": "^4.3.1",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react": "^7.34.2",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-react-refresh": "^0.4.7",
-    "vite": "^5.3.1"
-  }
+	"name": "default_react",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"dev:prod": "vite --mode production",
+		"dev:test": "vite --mode staging",
+		"build": "tsc -b && vite build",
+		"build:test": "vite build --mode staging",
+		"lint": "eslint .",
+		"preview": "vite preview"
+	},
+	"dependencies": {
+		"@emotion/css": "^11.13.0",
+		"@emotion/styled": "^11.14.0",
+		"@reduxjs/toolkit": "^2.2.6",
+		"@tanstack/react-query": "^5.52.1",
+		"@tanstack/react-query-devtools": "^5.52.1",
+		"axios": "^1.7.2",
+		"jquery": "^3.7.1",
+		"moment": "^2.30.1",
+		"prop-types": "^15.8.1",
+		"react": "^18.3.1",
+		"react-cookie": "^7.2.2",
+		"react-dom": "^18.3.1",
+		"react-redux": "^9.1.2",
+		"react-router-dom": "^6.24.1",
+		"redux": "^5.0.1"
+	},
+	"devDependencies": {
+		"@vitejs/plugin-react": "^4.3.1",
+		"eslint": "^8.57.0",
+		"eslint-plugin-react": "^7.34.2",
+		"eslint-plugin-react-hooks": "^4.6.2",
+		"eslint-plugin-react-refresh": "^0.4.7",
+		"vite": "^5.3.1"
+	}
 }
